--- a/CSS/style.css
+++ b/CSS/style.css
@@ -182,6 +182,7 @@ nav {
 
 .about-text {
     flex: 1;
+    text-align: justify;
 }
 
 .about-image {
@@ -411,4 +412,5 @@ footer {
     .hero p {
         font-size: 1.2rem;
     }
+
 }
