--- a/CSS/style.css
+++ b/CSS/style.css
@@ -91,6 +91,7 @@ a:hover {
 }
 
 .btn:hover {
+    color: white;
     background: var(--primary-dark);
     transform: translateY(-3px);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
@@ -414,3 +415,4 @@ footer {
     }
 
 }
+
